Add 4 more projects to portfolio
Added Ranchi Traffic Guide, Event Portal Aarambh, Accident Alert IoT System, and Web Security Scanner projects with full descriptions, tech stacks, and GitHub links.

--- a/index.html
+++ b/index.html
@@ -129,8 +129,101 @@
           <a href="https://jigisha-diksha.github.io/ranchi-local-guide/" target="_blank" rel="noopener">Live Demo</a>
         </p>
       </div>
+
+            <div class="card">
+        <div class="tag">AI • Python • Traffic Analysis</div>
+        <h4>Ranchi Traffic Guide</h4>
+        <p style="margin-top:0.3rem;">
+          AI-powered local traffic estimator for Ranchi using Kiro AI, providing real-time traffic predictions
+          and route optimization for commuters during peak hours.
+        </p>
+        <ul>
+          <li>Integrates machine learning models for traffic pattern analysis.</li>
+          <li>Provides accurate traffic density estimation for key routes.</li>
+          <li>Built for AI For Bharat Hackathon Week 5 Challenge.</li>
+        </ul>
+        <div class="pill-row">
+          <span class="pill">Python</span>
+          <span class="pill">Kiro AI</span>
+          <span class="pill">Machine Learning</span>
+        </div>
+        <p style="margin-top:0.6rem;">
+          <a href="https://github.com/Jigisha-Diksha/ranchi-traffic-guide" target="_blank" rel="noopener">View on GitHub</a>
+        </p>
+      </div>
+
+      <div class="card">
+        <div class="tag">Web App • JavaScript • Event Management</div>
+        <h4>Event Portal Aarambh</h4>
+        <p style="margin-top:0.3rem;">
+          Simple event management web application built with HTML, CSS, and JavaScript as part of the Aarambh
+          initiative for organizing and tracking college events.
+        </p>
+        <ul>
+          <li>Clean MVP design with essential event management features.</li>
+          <li>Responsive interface for mobile and desktop users.</li>
+          <li>Implements modern JavaScript for dynamic content handling.</li>
+        </ul>
+        <div class="pill-row">
+          <span class="pill">JavaScript</span>
+          <span class="pill">HTML</span>
+          <span class="pill">CSS</span>
+        </div>
+        <p style="margin-top:0.6rem;">
+          <a href="https://github.com/Jigisha-Diksha/Event-Portal-Aarambh" target="_blank" rel="noopener">View on GitHub</a>
+        </p>
+      </div>
+
+      <div class="card">
+        <div class="tag">IoT • C++ • Hardware</div>
+        <h4>Accident Alert IoT System</h4>
+        <p style="margin-top:0.3rem;">
+          Arduino-based IoT prototype that detects vehicle accidents using sensors and sends immediate
+          vibration alerts to emergency contacts, enhancing road safety.
+        </p>
+        <ul>
+          <li>Utilizes accelerometer sensors for collision detection.</li>
+          <li>Sends automatic SMS alerts with location data.</li>
+          <li>Prototyped with Arduino and tested for real-world scenarios.</li>
+        </ul>
+        <div class="pill-row">
+          <span class="pill">C++</span>
+          <span class="pill">Arduino</span>
+          <span class="pill">IoT</span>
+          <span class="pill">Sensors</span>
+        </div>
+        <p style="margin-top:0.6rem;">
+          <a href="https://github.com/Jigisha-Diksha/Accident-Alert-IoT-System" target="_blank" rel="noopener">View on GitHub</a>
+        </p>
+      </div>
+
+      <div class="card">
+        <div class="tag">Cybersecurity • Security Tools</div>
+        <h4>Web Security Scanner</h4>
+        <p style="margin-top:0.3rem;">
+          Vulnerability scanning setup and demonstration using WASP ZAP and DVWA (Damn Vulnerable Web Application)
+          for penetration testing and security assessment.
+        </p>
+        <ul>
+          <li>Configured OWASP ZAP for automated vulnerability scanning.</li>
+          <li>Tested against DVWA to identify common security flaws.</li>
+          <li>Documented findings and mitigation strategies.</li>
+        </ul>
+        <div class="pill-row">
+          <span class="pill">OWASP ZAP</span>
+          <span class="pill">DVWA</span>
+          <span class="pill">Penetration Testing</span>
+          <span class="pill">Security</span>
+        </div>
+        <p style="margin-top:0.6rem;">
+          <a href="https://github.com/Jigisha-Diksha/Web-Security-Scanner" target="_blank" rel="noopener">View on GitHub</a>
+        </p>
+      </div>
+
     </section>
 
+
+    
     <!-- SKILLS -->
     <section id="skills">
       <h3 class="section-title">Skills & Interests</h3>
