Add Experience section and enhance Skills from LinkedIn
Added comprehensive Experience section with 4 professional roles:
- Contributor at GirlScript Summer of Code
- Public Relations Manager at Aarambh
- Assistant Treasurer at G-SAC
- Operations Intern at Central Coalfields Limited

Enhanced Skills section with:
- Professional Services (Graphic Design, Social Media Marketing, Project Management, Product Management, Web Design, etc.)
- Certifications (Postman API Expert, Accenture Software Engineering)

All information sourced from LinkedIn profile.

--- a/index.html
+++ b/index.html
@@ -229,6 +229,72 @@
       <h3 class="section-title">Skills & Interests</h3>
       <div class="card">
         <strong>Languages & Tools</strong>
+
+            <!-- EXPERIENCE -->
+    <section id="experience">
+      <h3 class="section-title">Experience</h3>
+
+      <div class="card">
+        <div class="tag">Full-time • Jul 2025 - Present</div>
+        <h4>Contributor</h4>
+        <p style="margin-top:0.2rem; color:#9ca3af;">GirlScript Summer of Code</p>
+        <p style="margin-top:0.5rem;">
+          Selected as a contributor for GSSoC 2025, a nationwide open-source program by GirlScript Foundation.
+          Collaborating with mentors and fellow developers to contribute to real-world open-source projects.
+        </p>
+        <ul style="margin-top:0.4rem;">
+          <li>Contributing to large-scale codebases with Git and GitHub best practices.</li>
+          <li>Writing clean, maintainable, and well-documented code.</li>
+          <li>Participating in regular sync-ups and community discussions for task updates.</li>
+        </ul>
+      </div>
+
+      <div class="card">
+        <div class="tag">Full-time • Sep 2023 - Present</div>
+        <h4>Public Relations Manager</h4>
+        <p style="margin-top:0.2rem; color:#9ca3af;">Aarambh</p>
+        <p style="margin-top:0.5rem;">
+          Managing communications and coordinating large-scale events, ensuring alignment with strategic goals.
+          Leading cross-functional teams and strengthening brand messaging.
+        </p>
+        <ul style="margin-top:0.4rem;">
+          <li>Coordinated communications for multiple events with 500+ participants.</li>
+          <li>Strengthened brand messaging and engagement strategies.</li>
+          <li>Led cross-functional coordination across technical and creative teams.</li>
+        </ul>
+      </div>
+
+      <div class="card">
+        <div class="tag">Part-time • Feb 2025 - Present</div>
+        <h4>Assistant Treasurer</h4>
+        <p style="margin-top:0.2rem; color:#9ca3af;">G-SAC (Ramgarh Engineering College)</p>
+        <p style="margin-top:0.5rem;">
+          Managing budgets and financial planning for student activities and club events.
+          Supporting data-driven decision-making in resource allocation.
+        </p>
+        <ul style="margin-top:0.4rem;">
+          <li>Managed budgets aligned with mission-driven outcomes.</li>
+          <li>Maintained accurate financial records and reporting.</li>
+          <li>Supported event planning with cost-efficiency analysis.</li>
+        </ul>
+      </div>
+
+      <div class="card">
+        <div class="tag">Internship • Jun 2024 - Jul 2024</div>
+        <h4>Operations Intern</h4>
+        <p style="margin-top:0.2rem; color:#9ca3af;">Central Coalfields Limited</p>
+        <p style="margin-top:0.5rem;">
+          Analyzed and optimized cross-department workflows, gaining insight into systemic operations.
+          Maintained accurate reporting and used Excel for process tracking and improvement.
+        </p>
+        <ul style="margin-top:0.4rem;">
+          <li>Analyzed workflows and identified optimization opportunities.</li>
+          <li>Maintained detailed process tracking using Excel.</li>
+          <li>Contributed to problem-solving with data-backed suggestions.</li>
+        </ul>
+      </div>
+    </section>
+
         <div class="pill-row" style="margin-top:0.4rem;">
           <span class="pill">C</span>
           <span class="pill">C++</span>
@@ -255,6 +321,25 @@
         <strong style="display:block; margin-top:0.9rem;">Achievements</strong>
         <ul style="margin-top:0.4rem;">
           <li>Open-Source Contributor at GirlScript Summer of Code 2025.</li>
+
+                  <strong style="display:block; margin-top:0.9rem;">Professional Services</strong>
+        <div class="pill-row" style="margin-top:0.4rem;">
+          <span class="pill">Graphic Design</span>
+          <span class="pill">Social Media Marketing</span>
+          <span class="pill">Project Management</span>
+          <span class="pill">Product Management</span>
+          <span class="pill">Web Design</span>
+          <span class="pill">Data Entry</span>
+          <span class="pill">Virtual Assistance</span>
+          <span class="pill">Administrative Assistance</span>
+        </div>
+
+        <strong style="display:block; margin-top:0.9rem;">Certifications</strong>
+        <ul style="margin-top:0.4rem;">
+          <li>Postman API Fundamentals Student Expert (Dec 2025)</li>
+          <li>Accenture Nordics - Software Engineering Job Simulation (Jul 2025)</li>
+        </ul>
+
           <li>Built Ranchi Local Guide for AI For Bharat Hackathon, focusing on regional language accessibility.</li>
         </ul>
       </div>
