Add AWS Blog link to Contact section (with proper content)
Added AWS Builder Community blog link to Contact section:
- Link to article: "Building Ranchi Local Guide Translator with Kiro AI for AI For Bharat Hackathon"
- Showcases technical writing and AWS community engagement
- Also added AWS Blog button in header section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     </div>
   </header>
 
+            <a class="btn" href="https://builder.aws.com/content/37RHiSRNvnz4gLh5ibAUitqrSUP/building-a-ranchi-local-guide-translator-with-kiro-ai-for-bharat-hackathon" target="_blank" rel="noopener">AWS Blog</a>
   <main>
     <!-- ABOUT -->
     <section id="about">
@@ -357,6 +358,7 @@
       </div>
     </section>
   </main>
+            <li>AWS Blog: <a href="https://builder.aws.com/content/37RHiSRNvnz4gLh5ibAUitqrSUP/building-a-ranchi-local-guide-translator-with-kiro-ai-for-bharat-hackathon" target="_blank" rel="noopener">Building Ranchi Local Guide with Kiro AI</a></li>
 
   <footer>
     © 2025 Jigisha Diksha • Made with curiosity and code
