--- a/index.html
+++ b/index.html
@@ -104,6 +104,34 @@
       <h3 class="section-title">Highlighted Projects</h3>
 
       <div class="card">
+
+                <div class="tag">AI • FINTECH • FULL-STACK</div>
+        <h4>AI Stock Analyst Pro</h4>
+        <p style="margin-top:0.3rem;">
+          Enterprise-grade AI-powered stock analysis platform leveraging Google Gemini AI, real-time market data APIs, and advanced ML algorithms for intelligent investment recommendations with comprehensive risk assessment.
+        </p>
+        <ul>
+          <li>Integrates Google Gemini Pro AI for sophisticated financial analysis and reasoning.</li>
+          <li>Real-time market data fetching using Yahoo Finance API with live updates.</li>
+          <li>Multi-factor scoring system analyzing 20+ financial indicators for accurate recommendations.</li>
+          <li>Modern React + TypeScript + Vite architecture for high performance.</li>
+          <li>Comprehensive documentation with system architecture diagrams and deployment guides.</li>
+        </ul>
+        <div class="pill-row">
+          <span class="pill">TypeScript</span>
+          <span class="pill">React</span>
+          <span class="pill">Vite</span>
+          <span class="pill">Google Gemini</span>
+          <span class="pill">Yahoo Finance API</span>
+          <span class="pill">AI/ML</span>
+        </div>
+        <div style="margin-top: 1rem;">
+          <a href="https://github.com/Jigisha-Diksha/AI-Stock-Analyst-Pro" target="_blank">View on GitHub</a> • 
+          <a href="#" target="_blank">Live Demo</a>
+        </div>
+      </div>
+
+      <div class="card">
         <div class="tag">AI • NLP • Web App</div>
         <h4>Ranchi Local Guide Translator</h4>
         <p style="margin-top:0.3rem;">
