fix: Remove non-functional Live Demo link from AI Stock Analyst Pro

--- a/index.html
+++ b/index.html
@@ -126,8 +126,7 @@
           <span class="pill">AI/ML</span>
         </div>
         <div style="margin-top: 1rem;">
-          <a href="https://github.com/Jigisha-Diksha/AI-Stock-Analyst-Pro" target="_blank">View on GitHub</a> • 
-          <a href="#" target="_blank">Live Demo</a>
+          <a href="https://github.com/Jigisha-Diksha/AI-Stock-Analyst-Pro" target="_blank">View on GitHub< 
         </div>
       </div>
 
