feat: Add AI Stock Analyst Pro project to portfolio
Added new enterprise-grade AI-powered stock analysis platform:
- Integrates Google Gemini AI for financial analysis
- Real-time market data with Yahoo Finance API
- Built with React, TypeScript, and Vite
- Includes live demo and GitHub repository links

--- a/index.html
+++ b/index.html
@@ -225,6 +225,33 @@
         </p>
       </div>
 
+
+                <div class="card">
+      <div class="tag">AI • Fintech • Web App</div>
+      <h4>AI Stock Analyst Pro</h4>
+      <p style="margin-top:0.3rem;">
+        Enterprise-grade AI-powered stock analysis platform leveraging Google Gemini AI for sophisticated financial analysis
+        with real-time market data, providing intelligent investment recommendations.
+      </p>
+      <ul>
+        <li>Integrates Google Gemini Pro AI for sophisticated financial analysis and reasoning.</li>
+        <li>Real-time market data fetching using Yahoo Finance API with live updates.</li>
+        <li>Multi-factor scoring system analyzing 20+ financial indicators for accurate recommendations.</li>
+        <li>Modern React + TypeScript + Vite architecture for high performance.</li>
+        <li>Comprehensive documentation with system architecture diagrams and deployment guides.</li>
+      </ul>
+      <div class="pill-row">
+        <span class="pill">React</span>
+        <span class="pill">TypeScript</span>
+        <span class="pill">Vite</span>
+        <span class="pill">Google Gemini AI</span>
+        <span class="pill">Yahoo Finance API</span>
+      </div>
+      <p style="margin-top:0.6rem;">
+        <a href="https://github.com/Jigisha-Diksha/AI-Stock-Analyst-Pro" target="_blank" rel="noopener">View on GitHub</a> • 
+        <a href="https://jigisha-diksha.github.io/AI-Stock-Analyst-Pro/" target="_blank" rel="noopener">Live Demo</a>
+      </p>
+    </div>
       <div class="card">
         <div class="tag">Cybersecurity • Security Tools</div>
         <h4>Web Security Scanner</h4>
